<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cart"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favourites"
        app:showAsAction="always" />
    <item
        android:id="@+id/testFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
</menu>