<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/networkBanner"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white"
    android:elevation="11dp"
    android:visibility="visible">

    <ImageView
        android:id="@+id/wifiIcon"
        android:layout_width="95dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="60dp"
        android:layout_toStartOf="@+id/textViewConnection"
        android:src="@drawable/ic_no_wifi" />

    <TextView
        android:id="@+id/textViewConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonTurnOnWifi"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/no_internet" />

    <TextView
        android:id="@+id/buttonTurnOnWifi"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:text="@string/TURN_ON_WIFI"
        android:textColor="@color/primary_color" />

    <TextView
        android:id="@+id/btnDismiss"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/buttonTurnOnWifi"
        android:text="@string/dismiss"
        android:textColor="@color/secondary_color" />

</RelativeLayout>