<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/settings_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/gray_color"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/language_text_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/language_text_view"
            app:drawableStartCompat="@drawable/ic_language" />


        <TextView
            android:id="@+id/about_us_text_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/about_us_text_view" />

        <TextView
            android:id="@+id/privacy_policy_text_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_privacy"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/privacy_policy" />

        <Spinner
            android:id="@+id/spinner_currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:spinnerMode="dropdown" />


    </LinearLayout>

</LinearLayout>
